# BCML

./: .gitignore  .pylintrc  Cargo.toml  MANIFEST.in  README.md  bcml.py  bootstrap.sh  export.py  install.py  installer.cfg  installer.ps1  mergepacks.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  uninstall.py  update.py  vbump.py
.github/: FUNDING.yml  funding.yml
.github/workflows/: build.yml  installer.yml  publish.yml  push.yml
bcml/: Ui_about.py  Ui_install.py  Ui_main.py  Ui_options.py  Ui_package.py  Ui_progress.py  Ui_settings.py  __init__.py  __main__.py  __version__.py  _api.py  _oneclick.py  _server.py  cli.py  data.py  dev.py  events.py  export.py  gamebanana.py  gui.py  install.py  json_util.py  locks.py  merge.py  mergepacks.py  mergers.py  mergerstb.py  mergetext.py  mubin.py  pack.py  pickles.py  reorder.py  rstable.py  texts.py  uninstall.py  update.py  upgrade.py  util.py
bcml/assets/: .babelrc.bak  help.html  index.html  package-lock.json  package.json  webpack.config.js
bcml/assets/css/: main.css
bcml/assets/help/: beware.md  bnp.md  export.md  install.md  main.md  mods.md  trouble.md
bcml/assets/icon/: material-icons.css  material-icons.css.bak
bcml/assets/scripts/: bundle.js  bundle.js.LICENSE.txt  checksum.min.js
bcml/assets/src/: index.js
bcml/assets/src/js/: About.jsx  App.jsx  Backup.jsx  Context.jsx  DevTools.jsx  Donate.jsx  FirstRun.jsx  Folder.jsx  GameBanana.jsx  Install.jsx  ModInfo.jsx  Mods.jsx  Options.jsx  Profile.jsx  Progress.jsx  Selects.jsx  Settings.jsx  SortSelect.jsx  about.jsx  backup.jsx  bcml.jsx  compare.jsx  devtools.jsx  error.jsx  firstrun.jsx  folder.jsx  install.jsx  modinfo.jsx  mods.jsx  options.jsx  progress.jsx  selects.jsx  settings.jsx  sortselect.jsx
bcml/assets/src/scss/: App.scss
bcml/data/: clean.srsizetable  gb.sjson  hashtable.csv  master.srsizetable  text_hashes.sjson  version.txt  yaz0_cy.cp37-win_amd64.pyd
bcml/data/hashes/: switch.sjson  wiiu.sjson
bcml/data/msyt/: Msg_EUde_hashes.csv  Msg_EUen_hashes.csv  Msg_EUes_hashes.csv  Msg_EUfr_hashes.csv  Msg_EUit_hashes.csv  Msg_EUnl_hashes.csv  Msg_EUru_hashes.csv  Msg_USen.product.tar.lzma  Msg_USen_hashes.csv  Msg_USes_hashes.csv  Msg_USfr_hashes.csv  msyt_hashes.json
bcml/helpers/: 7z  pyapp.nsi
bcml/mergers/: __init__.py  actors.py  areadata.py  aslist.py  data.py  drop.py  effects.py  events.py  mainstatic.py  merge.py  mubin.py  pack.py  quests.py  residents.py  rstable.py  shop.py  texts.py
data/: priorities.csv
docs/: README.md  beware.md  bnp.md  export.md  index.md  install.md  mods.md  trouble.md
docs/license/: 7z.md  msyt.md
helpers/: install.py  mergepacks.py  mergerstb.py  uninstall.py  update.py
src/: aamp.rs  byml.rs  lib.rs  manager.rs  settings.rs  util.rs
src/mergers/: actorinfo.rs  maps.rs  mod.rs  pack.rs  texts.rs
webview/: __init__.py  event.py  guilib.py  localization.py  serving.py  util.py  window.py  wsgi.py
webview/js/: api.py  dom.py
webviewb/: __init__.py  event.py  guilib.py  http_server.py  localization.py  util.py  window.py
webviewb/js/: __init__.py  api.py  npo.py
