[package]
name = "bcml"
authors = ["Caleb Smith"]
version = "3.9.7"
edition = "2021"
readme = "docs/README.md"

[lib]
name = "bcml"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.48"
botw-utils = "0.3.1"
cow-utils = "0.1.2"
dirs2 = "3.0.1"
glob = "0.3.0"
indexmap = { version = "1.7.0", features = ["serde", "rayon"] }
join_str = "0.1.0"
lazy_static = "1.4.0"
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
path-slash = "0.1.4"
pyo3 = { version = "0.16.5", features = ["extension-module", "anyhow"] }
rayon = "1.5.1"
roead = "0.10.3"
rstb = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
thiserror = "1.0.30"

[target.'cfg(windows)'.dependencies]
junction = { git = "https://github.com/NiceneNerd/junction", rev = "84e0dbd793645acf2702de283f78e8f6e0043ea5" }