[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "bcml"
version = "3.10.7"
description = "A mod manager for The Legend of Zelda: Breath of the Wild"
author = "NiceneNerd"
author_email = "macadamiadaze@gmail.com"
license = { file = "docs/LICENSE.md" }
dependencies = [
    "botw-utils~=0.2.3",
    "cefpython3~=66.1; platform_system == 'Windows'",
    "oead~=1.2.6",
    "packaging~=21.3",
    "pythonnet~=3.0.1",
    "PyQt5; platform_system == 'Linux'",
    "pyqtwebengine~=5.15.2; platform_system == 'Linux'",
    "pywebview==3.7.2",
    "QtPy; platform_system == 'Linux'",
    "requests~=2.27.1",
    "rstb>=1.2.2",
    "xxhash~=3.2",
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
scripts = { bcml-debug = "bcml.__main__:main_debug" }
gui-scripts = { bcml = "bcml.__main__:main" }

[project.urls]
repository = "https://github.com/NiceneNerd/BCML"
homepage = "https://gamebanana.com/tools/6624"